--- a/public/themes/admin/admin/field/form.html
+++ b/public/themes/admin/admin/field/form.html
@@ -7,12 +7,10 @@
 <span class='label label-info'>列表</span>
 </a>
 
-<a href="{:url('admin/index/index')}">
-<span class='glyphicon glyphicon-home'></span>
-</a>
+ 
 
 </p>
-<form class='ajax_form'   enctype="multipart/form-data"  action="{:$action}" method="post">
+<form class='ajax_form field_auto'   enctype="multipart/form-data"  action="{:$action}" method="post">
     
    {:$form}
    
@@ -23,3 +21,6 @@
 	 
  
 {/block}
+
+
+
