--- a/public/themes/admin/base.html
+++ b/public/themes/admin/base.html
@@ -13,7 +13,7 @@ theme_url().'misc/css.css',
  
 {:widgets('Font')}
 {:widgets('JqueryUi')}
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 {block name="menu"}{/block}
