--- a/public/themes/admin/admin/field/form.html
+++ b/public/themes/admin/admin/field/form.html
@@ -17,10 +17,20 @@
   <button type="submit" class="btn btn-default">保存</button>
 </form>
 
-
+ 
 	 
  
 {/block}
 
 
-
+{block name="end"}
+<style type="text/css">
+.redactor_editor video, .redactor_editor img {
+    height: 200px;
+}
+.redactor_editor object, .redactor_editor embed, .redactor_editor video, .redactor_editor img {
+    width: 200px;
+    max-width: 200px;
+}
+</style>>
+{/block}
